--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -49,3 +56,5 @@ code {
   align-items: center;
 }
 .nav-link:hover{cursor: pointer;}
+
+.slider-single-content{box-shadow: none!important;}
