--- a/src/index.css
+++ b/src/index.css
@@ -7,23 +7,21 @@
 
 body {
   margin: 0;
-  font-family: "Lobster",-apple-system, BlinkMacSystemFont,'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif !important;
+  font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Droid Sans", "Helvetica Neue", sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .sidebar-sticky {
   position: relative;
   top: 0;
   height: calc(100vh - 48px);
-  padding-top: .5rem;
+  padding-top: 0.5rem;
   overflow-x: hidden;
   overflow-y: auto;
   /* Scrollable contents if viewport is shorter than content. */
@@ -42,7 +40,7 @@ code {
   /* Behind the navbar */
   padding: 48px 0 0;
   /* Height of navbar */
-  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 767.98px) {
@@ -51,21 +49,25 @@ code {
   }
 }
 
-.nav-link{
-  display: flex!important;
+.nav-link {
+  display: flex !important;
   align-items: center;
 }
-.nav-link:hover{cursor: pointer;}
+.nav-link:hover {
+  cursor: pointer;
+}
 
-.slider-single-content{box-shadow: none!important;}
+.slider-single-content {
+  box-shadow: none !important;
+}
 
 .mask-overlay::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background: #000000;
-  opacity: 0.20;
+  opacity: 0.2;
 }
